# dishsoap

./: .gitignore  Cargo.toml  README.md  vec.ds
compiler/: Cargo.toml  README.md
compiler/src/: builder.rs  lib.rs  main.rs  utils.rs  visitor.rs
compiler/src/backend/: builder.rs  mod.rs  tests.rs
compiler/src/types/: environment.rs  gather_top_level_declarations.rs  mod.rs  tests.rs  type_checker.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
parser/: Cargo.toml
parser/src/: lib.rs  test_inputs.rs  tests.rs
parser/src/ast/: block.rs  declaration.rs  expression.rs  identifier.rs  mod.rs  node.rs  operator.rs  parameter.rs  parser_result.rs  source_file.rs  statement.rs  type.rs  type_literal.rs  variable.rs  variable_declarator.rs
parser/src/ast/expression/: binary_expression.rs  boolean_literal.rs  expression.rs  field_access.rs  function_call.rs  if_expression.rs  integer_literal.rs  mod.rs  object_literal.rs  prefix_expression.rs  record_literal.rs  unit_literal.rs  variable_reference.rs
parser/src/ast/statement/: mod.rs  return_statement.rs  statement.rs
parser/src/ast/statement/declaration/: class_declaration.rs  declaration.rs  function_declaration.rs  mod.rs  variable_declaration.rs
parser/src/ast/type/: function_type.rs  mod.rs  record_type.rs  type.rs  type_reference.rs
