[package]
name = "dishsoap-compiler"
version = "0.1.0"
authors = ["Derek Xu <xuderekq@hotmail.com>"]
description = "Learning how to build a compiler in Rust"
edition = "2018"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
dishsoap-lexer = { path = "../lexer" }
dishsoap-parser = { path = "../parser" }
itertools = "0.10.3"
llvm-sys = { version = "130" }
serial_test = { version = "0.6.0" }
